<resources>
    <string name="app_name">Music Management Application</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="details">Album Details</string>
    <string name="top_albums">Top Albums</string>
    <string name="artist_name">Artist :-</string>
    <string name="tracks">Tracks :-</string>
    <string name="add_to_favourites">Mark as favourite</string>
    <string name="no_title">No Title</string>
    <string name="my_list">Saved list</string>
    <string name="album_name">Album :-</string>
    <string name="error">Error</string>
    <string name="ok">Ok</string>
    <string name="no_data">Currently no entries available</string>
    <string name="download">Download</string>

</resources>