<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/app_navigation"
    app:startDestination="@id/navigation_mylist">

    <fragment
        android:id="@+id/navigation_topAlbumFragment"
        android:name="com.appsfactory.musicmgmt.view.fragments.TopAlbumFragment"
        android:label="@string/top_albums"
        tools:layout="@layout/fragment_top_album">
        <action
            android:id="@+id/action_topAlbumFragment_to_albumDetailsFragment"
            app:destination="@id/navigation_albumDetailsFragment"></action>
    </fragment>
    <fragment
        android:id="@+id/navigation_searchFragment"
        android:name="com.appsfactory.musicmgmt.view.fragments.SearchFragment"
        android:label="@string/search"
        tools:layout="@layout/fragment_search">
        <action
            android:id="@+id/action_searchFragment_to_topAlbumFragment"
            app:destination="@id/navigation_topAlbumFragment" />
    </fragment>
    <fragment
        android:id="@+id/navigation_albumDetailsFragment"
        android:name="com.appsfactory.musicmgmt.view.fragments.AlbumDetailsFragment"
        android:label="@string/details">
        <argument
            android:name="albumModel"
            app:argType="com.appsfactory.musicmgmt.presentation.uiModels.AlbumUiModel"
            />
    </fragment>

    <fragment
        android:id="@+id/navigation_mylist"
        android:name="com.appsfactory.musicmgmt.view.fragments.MyMusicListFragment"
        android:label="@string/my_list"
        tools:layout="@layout/fragment_my_music_list">

        <action
            android:id="@+id/action_myListFragment_to_albumDetailsFragment"
            app:destination="@id/navigation_albumDetailsFragment"></action>
    </fragment>
</navigation>