<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="@dimen/dp_10"
    tools:context=".view.fragments.AlbumDetailsFragment">

    <ImageView
        android:id="@+id/img_album"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="@dimen/dp_10"
        android:src="@drawable/img_album_placeholder"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_favourite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_to_favourites"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txt_album_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/album_name"
        app:layout_constraintLeft_toLeftOf="@+id/img_album"
        app:layout_constraintTop_toBottomOf="@+id/img_album" />

    <TextView
        android:id="@+id/txt_album_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dp_10"
        android:text="test string"
        app:layout_constraintLeft_toRightOf="@+id/txt_album_name"

        app:layout_constraintTop_toTopOf="@+id/txt_album_name" />

    <TextView
        android:id="@+id/txt_artist_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/artist_name"

        app:layout_constraintStart_toStartOf="@+id/txt_album_name"
        app:layout_constraintTop_toBottomOf="@+id/txt_album_name" />

    <TextView
        android:id="@+id/txt_artist_name_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="test string"
        app:layout_constraintLeft_toLeftOf="@+id/txt_album_name_value"


        app:layout_constraintTop_toTopOf="@+id/txt_artist_name" />

    <TextView
        android:id="@+id/txt_tracks"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_10"
        android:text="@string/tracks"
        app:layout_constraintLeft_toLeftOf="@+id/img_album"
        app:layout_constraintTop_toBottomOf="@+id/txt_artist_name" />

    <LinearLayout
        android:id="@+id/ll_track_names"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintLeft_toLeftOf="@+id/txt_artist_name_value"
        app:layout_constraintTop_toTopOf="@+id/txt_tracks" />

    <ProgressBar
        android:id="@+id/pg_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>